kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fint-oneroster-rest-provider
  labels:
    io.kompose.service: fint-oneroster-rest-provider
spec:
  selector:
    matchLabels:
      io.kompose.service: fint-oneroster-rest-provider
  template:
    metadata:
      labels:
        io.kompose.service: fint-oneroster-rest-provider
    spec:
      containers:
        - name: fint-oneroster-rest-provider
          image: ghcr.io/fintlabs/fint-oneroster-rest-provider:latest
          resources:
            limits:
              cpu: '2'
              memory: 4Gi
            requests:
              cpu: '1'
              memory: 2Gi
          ports:
            - containerPort: 8080
