kustomize/base/ingress_route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-oneroster-rest-provider
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hostname`) && PathPrefix(`path`)
      kind: Rule
      services:
        - name: fint-oneroster-rest-provider
          port: 8080
